<resources>
    <string name="app_name">"MyTokyo2020"</string>
    <string-array name="array_names">
        <item>Opcion1</item>
        <item>Opcion2</item>
        <item>Opcion3</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string-array name="Disciplinas">
        <item>Archery</item>
        <item>Atletics</item>
        <item>Basketball</item>
        <item>Beach Volley</item>
        <item>BMX</item>
        <item>Boxing</item>
        <item>Diving</item>
        <item>Equestrian Dressage</item>
        <item>Equestrian Eventing</item>
        <item>Equestrian Jumping</item>
        <item>Fencing</item>
        <item>Golf</item>
        <item>Gymnastics Artistics</item>
        <item>Gymnastics Rythmics</item>
        <item>Handball</item>
        <item>Hockey</item>
        <item>Judo</item>
        <item>Kayak Slalom</item>
        <item>Kayak Sprint</item>
        <item>Marathon Swim</item>
        <item>Mountain Bike</item>
        <item>Pentathlon</item>
        <item>Road Cycling</item>
        <item>Rowing</item>
        <item>Rugby</item>
        <item>Sailing</item>
        <item>Shooting</item>
        <item>Soccer</item>
        <item>Synchronized Swimming</item>
        <item>Table Tennis</item>
        <item>Taekwondo</item>
        <item>Tennis</item>
        <item>Track Cycling</item>
        <item>Trampline</item>
        <item>Volleyball</item>
        <item>Water Polo</item>
        <item>Weightlifting</item>
    </string-array>
    <string name="title_activity_disciplina">Disciplina</string>
    <string name="Eventos">Events</string>
    <string name="Atletas">Athletes</string>
    <string name="Noticias">News</string>
    <string name="Resultados">Results</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="NombreFoto">Nombre</string>
    <string name="Puntos">Puntos</string>
    <string name="PastEvents">Past Events</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="descriptionFoto">Descripcion</string>
    <string name="tipo">Event</string>
    <string name="hora">Time</string>
    <string name="lugar">Place</string>

    <string-array name="Idiomas">
        <item>English</item>
    <item>French</item>
        <item>Japanese</item>
        <item>Spanish</item>

    </string-array>

</resources>
