<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dam.upm.mytokyo2020.ProfileActivity">


    <ImageView
        android:id="@+id/foto_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descriptionFoto"
        android:scaleType="center"
        android:layout_marginTop="40dp"
        android:scaleX="3"
        android:scaleY="3"
        app:srcCompat="@drawable/ic_profile" />

    <FrameLayout
        android:id="@+id/LineaCabecera"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_span="6"
        android:layout_marginTop="30dp"
        android:background="#cecece" >
    </FrameLayout>

    <TextView
        android:id="@+id/nombreFoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/NombreFoto"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/puntos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:paddingBottom="10dp"

        android:text="@string/Puntos"
        android:textAlignment="center"
        />
    <FrameLayout
        android:id="@+id/LineaCabecera2"
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:layout_span="6"
        android:layout_marginTop="3dp"
        android:background="#cecece">

    </FrameLayout>


    <TextView
        android:id="@+id/pastEvents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:text="@string/PastEvents"
        android:textAlignment="center" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:background="#0db8c7">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tipo"
                android:textAlignment="center"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hora"
                android:textAlignment="center"
                android:textColor="#ffffff"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/lugar"
                android:textAlignment="center"
                android:textColor="#ffffff"/>
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/dete_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deleteAccount" />
</LinearLayout>
